fix BIT in table

--- a/6502.htm
+++ b/6502.htm
@@ -432,7 +432,7 @@ Please ask questions or report any errors you may find by raising an Issue <A HR
         <td><table summary="" align="center" border="0">
           <tr><td align="left"><small><b>           2       </b></small></td>
               <td align="right"><small><b>          3      </b></small></td></tr>
-          <tr><th colspan="2">       <a href="#ROR">ROR     </a></th></tr>
+          <tr><th colspan="2">       <a href="#ROR">BIT     </a></th></tr>
           <tr><td align="center" colspan="2"><small>ZeroPage</small></td></tr>
           <tr><td align="center" colspan="2"><small>[NV&#8209;bdiZ]        </table></td>
         <td><table summary="" align="center" border="0">
@@ -470,7 +470,7 @@ Please ask questions or report any errors you may find by raising an Issue <A HR
         <td><table summary="" align="center" border="0">
           <tr><td align="left"><small><b>           3       </b></small></td>
               <td align="right"><small><b>          4      </b></small></td></tr>
-          <tr><th colspan="2">       <a href="#ROR">ROR     </a></th></tr>
+          <tr><th colspan="2">       <a href="#ROR">BIT     </a></th></tr>
           <tr><td align="center" colspan="2"><small>Abs</small></td></tr>
           <tr><td align="center" colspan="2"><small>[NV&#8209;bdiZ]        </table></td>
         <td><table summary="" align="center" border="0">
